errorlog.txt
Main.java:6: error: <identifier> expected
	}dskcksdbvkdkhbhk,ajbduvb
	                 ^
Main.java:6: error: ';' expected
	}dskcksdbvkdkhbhk,ajbduvb
	                         ^
2 errors
